some adjusts on testing